Made the message on the homepage more useful

--- a/pages/Main_Page.htm
+++ b/pages/Main_Page.htm
@@ -12,7 +12,10 @@
             <td align="center">
                 <div style="margin: 0 auto; margin-bottom: 5px; padding: .5em 1em .5em; border: 1px solid #88de35; background-color: #c2f7ba; border-radius: 5px;">
                     <p>
-                        Welcome to the Dingoonity Wiki. This is a static backup of the old MediaWiki that we had
+                        Welcome to the Dingoonity Wiki. This is a static backup of the old MediaWiki.
+                    </p>
+                    <p>
+                        Want to change something? You can now do so through a Github Pull Request. <a href="https://github.com/omgmog/wiki.dingoonity.org">Check out the repository on Github</a>.
                     </p>
                 </div>
             </td>
